# feast_intro

./: 4_generating_training_data.py  5_load_features_into_online_store.sh  6_fetching_feature_vectors.py  7_parse_feast_repos.py  8_driver_stats_new_column_parquet.py  pyproject.toml  readme.md
feature_repo/: 2_init_feature_repo.sh  3_feast_apply.sh  3_register_feature_defs.py  4_generating_training_data.py  6_fetching_feature_vectors.py  example.py  feature_store.yaml
feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
