[tool.poetry]
name = "feast_intro"
version = "0.1.0"
description = ""
authors = ["Nik Brezginov <nbrezginov@alfabank.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
feast = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
